Further tweak to fix odd spacing on list view

--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,7 @@ body {
 }
 h1 {
   padding: 14px 0 14px 0;
-  margin: 0 0 14px 0;
+  margin: 0;
   font-size: 44px;
   border-bottom: solid 1px #DDD;
   line-height: 1em;
